--- a/01-HTML-CSS/09-animations/CSSfinal pro/style.scss
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/style.scss
@@ -1,83 +1,186 @@
 body {
-    background: linear-gradient(-45deg, #f56b41, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
-    height: 100vh;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-.searchBox {
-    position: absolute;
-    top: 0.0vh;
-    left: 10vw;
-    transform: translate(-50%, 50%);
-    background: #2f3640;
-    height: 40px;
-    border-radius: 40px;
-    padding: 10px;
-
-}
-
-.searchBox:hover>.searchInput {
-    width: 240px;
-    padding: 0 6px;
-}
-
-.searchBox:hover>.searchButton {
-    background: white;
-    color: #2f3640;
-}
-
-.searchButton {
-    color: white;
-    float: right;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: #50709c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.4s;
-}
-
-.searchInput {
-    border: none;
-    background: none;
-    outline: none;
-    float: left;
-    padding: 0;
-    color: white;
+    background-color: white;
+    color: #525252;
+    font-family: system-ui, "Roboto", "Open Sans", sans-serif;
     font-size: 16px;
-    transition: 0.4s;
-    line-height: 40px;
-    width: 0px;
+    line-height: 1.6em;
+    margin: 0px;
+    margin-top: 20px;
+}
+
+div {
+    border: 1px solid red;
+}
+
+a {
+    text-decoration: none;
+    color: #525252;
+}
+
+img {
+    width: 100%;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 28px;
+    color: #272727;
+}
+
+h2 {
+    font-weight: bold;
+    font-size: 20px;
+    color: #686868;
+}
+
+h3 {
+    font-size: 14px;
+    color: #383737;
+    font-weight: 400;
+}
+
+h4 {
+    font-size: 12px;
+    color: #808080;
+    font-weight: 100;
+}
+
+button {
+    border: none;
+    color: rgb(85, 83, 83);
+    font-family: system-ui, "Roboto", "Open Sans", sans-serif;
+    cursor: pointer;
+}
+
+
+input {
+    border: 1px solid #fdd799;
+    border-radius: 5px;
+    background-color: #fffcfa;
+    min-height: 26px;
+    width: 16em;
+}
+
+
+.header {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    max-height: 100px;
+    margin-bottom: 10px;
+
+
+    &__top {
+        display: grid;
+        grid-template-columns: 20% 1fr 1fr 1fr 20%;
+        border-bottom: 1px solid #e2e2e2;
+
+        @media only screen and(max-width:992px) {
+            display: grid;
+            grid-template-columns: 5% 1fr 1fr 2fr 5%;
+
+        }
+
+
+        &__logo-pic {
+            box-sizing: border-box;
+            object-fit: contain;
+            width: 30%;
+            height: 100%;
+            cursor: pointer;
+        }
+
+        &__search-box {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &__log-sign {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            padding-left: 8em;
+            width: 10em;
+
+
+
+            &__sign-up {
+                border: 1px solid #e4e4e4;
+                padding: 0em 1em 0.1em 1em;
+                width: 4em;
+            }
+        }
+
+    }
+
+
+    &__nav {
+        display: grid;
+        grid-template-columns: 20% 1fr 1fr 1fr 20%;
+        padding-bottom: 20px;
+        padding-top: 30px;
+
+        @media only screen and(max-width:992px) {
+            display: grid;
+            grid-template-columns: 5% 1fr 2fr 1fr 5%;
+
+        }
+
+        &__city {
+            color: #ff9d02;
+            display: grid;
+            grid-template-columns: 2em 3em 2em;
+            align-items: center;
+            font-size: 18px;
+            font-weight: 500;
+            cursor: pointer;
+        }
+
+        &__middle {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            justify-content: center;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1em;
+            font-size: 16px;
+            font-weight: 500;
+
+            &__button {
+                background-color: #ff9d02;
+                border-radius: 15px;
+                padding: 0.2em;
+                word-spacing: 2px;
+                color: white;
+                height: 2.6em;
+            }
+        }
+    }
 
 }
+
+
 
 .main {
-    margin-top: 10vh;
-    width: 100vw;
-    height: 80vh;
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    margin-top: 5vh;
+    position: relative;
+    left: 20%;
+    right: 20%;
+    width: 60%;
+    height: auto;
 
     @media only screen and(max-width: 992px) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(10, 1fr);
         gap: 10px;
+        position: relative;
+        left: 20%;
+        right: 20%;
+        justify-content: center;
     }
 
     @media only screen and (min-width:992px) {
@@ -85,6 +188,10 @@ body {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(5, 1fr);
         gap: 10px;
+        position: relative;
+        left: 20%;
+        right: 20%;
+        justify-content: center;
     }
 
     @media only screen and(min-width:1200px) {
@@ -92,6 +199,10 @@ body {
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 10px;
+        position: relative;
+        left: 20%;
+        right: 20%;
+        justify-content: center;
     }
 
     .fruits {
@@ -105,8 +216,8 @@ body {
         @media only screen and (max-width:992px) {
             img {
                 margin-top: 2vh;
-                width: 35vw;
-                height: 25vh;
+                width: 15em;
+                height: 20em;
                 border-radius: 10%;
             }
 
@@ -115,8 +226,8 @@ body {
         @media only screen and (min-width:992px) {
             img {
                 margin-top: 2vh;
-                width: 14vw;
-                height: 12vh;
+                width: 14em;
+                height: 15em;
                 border-radius: 10%;
             }
         }
@@ -124,8 +235,8 @@ body {
         @media only screen and(min-width:1200px) {
             img {
                 margin-top: 2vh;
-                width: 18vw;
-                height: 20vh;
+                width: 15em;
+                height: 15em;
                 border-radius: 10%;
             }
         }
@@ -139,12 +250,104 @@ body {
         animation-timing-function: ease-in-out;
 
     }
-    @keyframes wiggle {
-        0% {transform: rotate(3deg);}
-        25% {transform: rotate(-3deg);}
-        50% {transform: rotate(5deg);}
-        75% {transform: rotate(-5deg);}
-        100% {transform: rotate(0deg);}
-      }
 
+    @keyframes wiggle {
+        0% {
+            transform: rotate(3deg);
+        }
+
+        25% {
+            transform: rotate(-3deg);
+        }
+
+        50% {
+            transform: rotate(5deg);
+        }
+
+        75% {
+            transform: rotate(-5deg);
+        }
+
+        100% {
+            transform: rotate(0deg);
+        }
+    }
+
+    .cart {
+        background-color: #ff9d02;
+        border-radius: 10%;
+        width: 5em;
+        text-align: center;
+    }
+
+}
+
+
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+/* The actual popup */
+
+.popuptext {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.popup .popuptext {
+    visibility: hidden;
+    width: 8em;
+    background-color: #ffffff;
+    color: rgb(156, 156, 156);
+    border: 1px solid lightgray;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    top: 50px;
+    left: 3em;
+    margin-left: -80px;
+}
+
+// Popup arrow:
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(182, 182, 182) transparent transparent transparent;
+}
+
+// Popup hide and show:
+.popup .show {
+    visibility: visible;
+    animation: fadeIn 0.2s;
+}
+
+// Popup animation:
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
