--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -473,8 +473,8 @@ body {
                                 transform: scale(0.7);
                             }
                         }
-                        &--bigIcons{
-                            grid-column: 1;
+                        // &--bigIcons{
+                        //     grid-column: 1;
                         .rainy {
                             display: grid;
                             grid-template-columns: repeat(5, 1fr);
@@ -499,20 +499,20 @@ body {
                         @keyframes rains {
                             from {
                                 opacity: 0.5;
-                                transform: translateY(5vh) skew(-30deg, -20deg);
+                                transform: translate(-5vh, 5vh) skew(-30deg, -20deg);
                             }
 
                             50% {
-                                transform: translateY(10vh) skew(-30deg, -20deg);
+                                transform: translate(-5vh, 10vh) skew(-30deg, -20deg);
                                 opacity: 1;
                             }
 
                             to {
                                 opacity: 0.5;
-                                transform: translateY(15vh) skew(-30deg, -20deg);
+                                transform: translate(-5vh,15vh) skew(-30deg, -20deg);
                             }
                         }
-                    }
+                   // }
                     }
                 }
                     &__down {
@@ -1307,12 +1307,12 @@ body {
                                         transform: scale(0.7);
                                     }
                                 }
-                                &--bigIcons{
+                               
                                 .rainy {
                                     display: grid;
                                     grid-template-columns: repeat(5, 1fr);
                                     grid-row: 1;
-                                    gap: 5px;
+                                    gap: 10px;
                                     grid-column: 1;
                                     grid-template-rows: 1fr;
                                     // margin-left: -50px;
@@ -1333,20 +1333,20 @@ body {
                                 @keyframes rains {
                                     from {
                                         opacity: 0.5;
-                                        transform: translateY(5vh) skew(-30deg, -20deg);
+                                        transform: translate(-5vh, 5vh) skew(-30deg, -20deg);
                                     }
         
                                     50% {
-                                        transform: translateY(9vh) skew(-30deg, -20deg);
+                                        transform: translate(-5vh, 9vh) skew(-30deg, -20deg);
                                         opacity: 1;
                                     }
         
                                     to {
                                         opacity: 0.5;
-                                        transform: translateY(10vh) skew(-30deg, -20deg);
+                                        transform: translate(-5vh, 10vh) skew(-30deg, -20deg);
                                     }
                                 }
-                            }
+                            
                             }
                         }
                             &__down {
@@ -1593,11 +1593,6 @@ body {
                         grid-template-rows: 0.1fr 0.1fr;
                         grid-template-columns: 2fr 3fr;
                         &__text{
-                            margin: auto;
-                            display: grid;
-                            grid-template-columns: 1fr;
-                            grid-template-rows: 0.1fr 0.1fr;
-                            grid-row: 1;
                         &--text {
                             
                             grid-row: 1;
@@ -1904,19 +1899,19 @@ body {
                                         opacity: 1;
                                     }
                                 }
-        &--bigIcons{
+        // &--bigIcons{
                                 .rainy {
                                     display: grid;
-                                    grid-template-columns: repeat(5, 5fr);
-            
+                                    grid-template-columns: repeat(5, 1fr);
                                     grid-row: 1;
                                     gap: 10px;
                                     grid-column: 1;
+                                    grid-template-rows: 1fr;
                                     
                                     .rain {
                                       grid-row: 1;
                                       grid-column: 1;
-                                        width: 5px;
+                                        width: 2px;
                                         height: 6px;
                                         animation-name: rains;
                                         animation-duration: 1s;
@@ -1942,7 +1937,8 @@ body {
                                         opacity: 0.5;
                                         transform: translateY(9vh) skew(-30deg, -20deg);
                                     }
-                                }  }   
+                                } 
+                            //}    
                         }
                     }
                         &__down {
