--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -734,66 +734,56 @@ body {
         }
 
     }
-
+    .cont{
+        max-width: 600px;
+        margin: auto;
     .wrapper {
+       
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: 1fr 1fr;
         grid-column-gap: 10px;
         grid-row-gap: 10px;
-        height: 20vh;
         color: rgb(228, 228, 228);
 
         .fas {
-            font-size: 400px;
-            color: violet;
-        }
-
-        &__city {
-            grid-column: 1;
-            grid-row: 1;
-
-            h1 {
-                left: 50px;
-            }
-        }
-
-        &__photo {
-            grid-column: 2;
-            grid-row: 1/3
-        }
-
-        &__degrees {
-            grid-column: 1;
-            grid-row: 2;
-
-        }
-
-        &__weather {
-            grid-column-start: 1;
-            grid-column-end: 1;
-            grid-row-start: 3;
-            background-color: rgb(119, 42, 182);
-            width: 120px;
-            border-radius: 30%;
-            color: white;
-
-
+            font-size: 200px;
+            color: blueviolet;
+            margin: auto;
+            animation-duration: 3s;
+            animation-delay: 1s;
+            animation-direction: reverse;
+             animation-timing-function: ease-in-out;
         }
 
 
+        
     }
-
+    .back{
+        background-color: blueviolet;
+        width: 120px;
+        border-radius: 20%;
+    }
     .weatherBar {
         display: flex;
-        height: 5vh;
-        width: 80vw;
         background-color: transparent;
-        position: absolute;
-        top: 60vh;
         justify-content: space-between;
         color: white;
+        
+
     }
+    .graphic{
+        display: flex;
+        justify-content: space-between;
+
+        &__graph{
+            width:500px; height:100px;  
+            border:solid 5px rgb(196, 188, 188);
+            border-color:rgb(192, 183, 183) transparent transparent transparent;
+            border-radius: 150%/100px 100px 0 0;
+        }
+        
+        
+      }
 
     .hours {
         display: grid;
@@ -801,8 +791,11 @@ body {
         grid-template-rows: repeat(3, 1fr);
         grid-row-gap: 10px;
         position: relative;
-        top: 600px;
         color: white;
+        .fas{
+            color: blueviolet;
+        }
+
     }
 
     .days {
@@ -812,9 +805,21 @@ body {
         font-size: x-large;
         position: relative;
         color: white;
-        top: 700px;
         grid-row-gap: 10px;
+        .fas{
+            color: blueviolet;
+        }
+        
     }
+    .bar {
+        
+        padding-top: 40px;
+        padding-left: 70px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+
+    }
+}
 
     @keyframes rorate {
         from {
