--- a/01-HTML-CSS/09-animations/mishaschedule/style3.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/style3.scss
@@ -1,3 +1,5 @@
+// Michael STARTs
+
 // colors and font //
 
 $iconscolor: rgb(72, 69, 69);
@@ -571,3 +573,10 @@ body {
         }
     }
 }
+
+
+
+//  Michael ENDs
+
+
+
