--- a/01-HTML-CSS/09-animations/mishaschedule/Marina Mchael Shimon - Css Project/CSS project/home style.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/Marina Mchael Shimon - Css Project/CSS project/home style.scss
@@ -1,11 +1,12 @@
-body{
+.shimon{
     background-color: rgba(128, 128, 128, 0.089);
     justify-items: center;
-#main-wrapper  {
+
+    #main-wrapper  {
   width: 600px;
   margin-right: auto;
   margin-left: auto;
-}
+    }
 
 
 .container {
@@ -83,4 +84,5 @@ body{
 
 
     }
-}
+  }
+
