--- a/01-HTML-CSS/09-animations/mishaschedule/style3.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/style3.scss
@@ -86,7 +86,18 @@ html {
     height: 100%;
 }
 
-body {
+// body {
+
+//     background-color: $bgcolor;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: flex-start;
+//     padding: 0.5em;
+
+// }
+
+
+.Body_schedule {
 
     background-color: $bgcolor;
     display: flex;
