--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.scss
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.scss
@@ -230,17 +230,33 @@ nav ul.menu-area ul li a:hover
         padding: 25px 50px;
         opacity: 0;
         transition: all 0.5s ease-in-out;
+
+    }
+
+    &__text
+    {
+        font-size: 50px;
+        position: relative;
+        color: rgb(80, 78, 78);
+        margin-top: 10px;
+        left: 35vw;
+        transition: 0.75s;
+
+        &:hover
+        {
+            color: #e41818;
+        }
     }
 }
 
 .arrow
 {
-    border: solid black;
+    border: solid rgb(238, 234, 234);
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 12px;
     width: 2ch;
-    height: 3hv;
+    height: 3vh;
 
     &:hover
     {
@@ -252,7 +268,9 @@ nav ul.menu-area ul li a:hover
 
 .arrow_prev
 {
-    left: 30px;
+    left: 70px;
+    border: 2px solid black;
+    border-width: 0 3px 3px 0;
     position: absolute;
     top: 50%;
     transform: translateY(-50%) rotate(135deg);
@@ -260,7 +278,9 @@ nav ul.menu-area ul li a:hover
 
 .arrow_next
 {
-    right: 30px;
+    right: 70px;
+    border: 2px solid black;
+    border-width: 0 3px 3px 0;
     position: absolute;
     top: 50%;
     transform: translateY(-50%) rotate(-45deg);
@@ -277,6 +297,8 @@ nav ul.menu-area ul li a:hover
     opacity: 1;
     background: url('https://files.porsche.com/filestore/image/multimedia/none/cayenne-models-e3chili-announcement/preview/1cc14607-c9ea-11eb-80d7-005056bbdc38;sZ;twebp/porsche-preview.webp');
     background-size: cover;
+    color: chartreuse;
+
 }
 
 .item-2
@@ -312,12 +334,5 @@ nav ul.menu-area ul li a:hover
     z-index: 3;
     opacity: 1;
 }
-
-.something
-{
-    font-size: 10px;
-    color: white;
-}
-
 
 //General Carousel  end ------------------------------------------------------>
