--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -19,7 +19,7 @@
      background: rgb(141, 53, 223);
      transform-origin: center top;
      transform: rotate(0.5turn);
-     transition: transform 0.2s ease-out;
+     transition: transform 3s ease-out;
    }
 
    &__cover1 {
@@ -33,10 +33,28 @@
      display:flex;
      align-items: center;
      justify-content: center;
-     font-size: 50px;
-      .span {
-        size: 20px;
+
+
+     &__circle {
+      width:70%;
+      height: 70%;
+      border-radius: 50%;
+      border:1px solid red;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  
+     &--a {
+        font-size: 15px;
       }
+     &--b {
+        font-size: 30px;
+      }
+     &--c {
+        font-size: 15px;
+      }
+     }
    }
 
    &__cover2 {
