--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
@@ -4,8 +4,8 @@ body {
 
 .Container {
   display:grid;
-  margin:0px;
-  height: 98vh;
+  margin:0;
+  height: 100vh;
   width: 100%;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.1fr auto 0.1fr;
@@ -51,10 +51,44 @@ body {
       }
     }
   }
-  &__Wil {
-    border:1px solid red;
-    grid-area: Wil;
+    &__Wil {
+      background-color: black;
+      grid-area: Wil;
+
+      &__statBox {
+        display: grid;
+        margin: auto;
+        width:95%;
+        height: 100%;
+        grid-template-rows: 1fr 2fr 1fr 1fr ;
+        border: 1px solid red;
+
+        &__heading {
+          display: grid;
+          justify-content: center;
+          align-items: center;
+          border: 1px solid red;
+          color:white;
+          font-size: 30px;
+        }
+        &__gaugeBox {
+          display: grid;
+          align-items: center;
+          border: 1px solid red;
+        }
+        &__statBtn {
+          display: grid;
+          border: 1px solid red;
+
+        }
+        &__viewDetails {
+          display: grid;
+          border: 1px solid red;
+        }
+      }
+ 
   }
+
   &__Roi {
     border:1px solid red;
     grid-area: Roi;
@@ -65,6 +99,7 @@ body {
     grid-area: Yael;
   }
   &__Navbar {
+    height: 5vh;
     border:1px solid red;
     background-color: black;
     grid-area: Navbar;
@@ -83,6 +118,75 @@ body {
         height: 25px;
       }
     }
+  }
+}
+
+.gauge {
+  
+  max-width: 350px;
+
+  &__body {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    border-radius:50%;
+    overflow: hidden;
+
+   &__fill {
+     position:absolute;
+     top:100%;
+     left:0;
+     width:inherit;
+     height: 100%;
+     background: rgb(141, 53, 223);
+     transform-origin: center top;
+     transform: rotate(0.5turn);
+     transition: transform 3s ease-out;
+   }
+
+   &__cover1 {
+     width:75%;
+     height:75%;
+     background: black;
+     border-radius: 50%;
+     position:absolute;
+     top:12.5%;
+     left:12.5%;
+     display:flex;
+     align-items: center;
+     justify-content: center;
+
+
+     &__circle {
+      width:70%;
+      height: 70%;
+      border-radius: 50%;
+      background-color: rgb(31, 28, 28);
+      color:white;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  
+     &--a {
+        font-size: 20px;
+      }
+     &--b {
+        font-size: 30px;
+      }
+     &--c {
+        font-size: 15px;
+      }
+     }
+   }
+
+   &__cover2 {
+     width:100%;
+     height:40%;
+     position:absolute;
+     top:70%;
+     background: black;
+   }
   }
 }
 
@@ -105,6 +209,7 @@ body {
 }
 
 @media only screen and (min-width:1200px){ 
+  
   .Container {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.1fr 0.9fr;
