--- a/01-HTML-CSS/09-animations/mishaschedule/style3.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/style3.scss
@@ -53,6 +53,7 @@ $bgcolor: #f0f1f6;
     50% {
         transform: rotate(10deg);
     }
+
     100% {
         transform: rotate(-10deg);
     }
@@ -166,9 +167,9 @@ html {
         font-size: 30px;
     }
 
-    div{
-        &:hover{
-        cursor: pointer
+    div {
+        &:hover {
+            cursor: pointer
         }
     }
 
@@ -319,9 +320,9 @@ html {
 
             cursor: pointer;
             height: 76%;
-            background-image: linear-gradient(145deg,             
-            $primarycolor1, $primarycolor2,
-            $primarycolor1);
+            background-image: linear-gradient(145deg,
+                    $primarycolor1, $primarycolor2,
+                    $primarycolor1);
             background-position: left;
             background-size: 500%;
             animation-name: colorslide;
@@ -391,9 +392,9 @@ html {
             border-radius: 25px;
             height: 100%;
             width: 67%;
-            background-image: linear-gradient(to right,             
-            $primarycolor1, $primarycolor2,
-            $primarycolor1);
+            background-image: linear-gradient(to right,
+                    $primarycolor1, $primarycolor2,
+                    $primarycolor1);
             background-position: left;
             background-size: 500%;
             animation-name: colorslide;
@@ -587,7 +588,8 @@ html {
 
 
 
-//  Michael ENDs
 
 
 
+
+а //  Michael ENDs
