--- a/01-HTML-CSS/09-animations/mishaschedule/Marina Mchael Shimon - Css Project/CSS project/home style.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/Marina Mchael Shimon - Css Project/CSS project/home style.scss
@@ -1,88 +1,99 @@
-.shimon{
-    background-color: rgba(128, 128, 128, 0.089);
-    justify-items: center;
+.shimon {
+  background-color: rgba(128, 128, 128, 0.089);
+  justify-items: center;
+  height: fit-content;
 
-    #main-wrapper  {
-  width: 600px;
-  margin-right: auto;
-  margin-left: auto;
-    }
+  #main-wrapper {
+    width: 600px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 
 
-.container {
-    justify-self:center;
-    margin-top: 5px;
-    padding: 10px;
+  .container {
+    justify-self: center;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 3px;
 
-    @keyframes magnificent_popup {
-        from{left:20px;}
-        to  {left:900px;}
-   }
-   
-   .cloud {
-       position:absolute;
-       top: 19vh;
-       width:400px;
-       height:600px;
-       right:400px;
-       animation-name: magnificent_popup;
-       animation-duration: 15s;
-       animation-iteration-count: infinite;
-       animation-direction: alternate;
-       animation-fill-mode: forwards;
-       border-radius: 20%;
-   }
-   .cloud.active {
-       display:block;
-       margin-right: auto;
-       margin-left: auto;    }
-  
-    .bird {
-        position: absolute;
-        top: 8vh;
-        right:3vw;
-        width: 160px;
-        display:block;
-        margin-right: auto;
-        margin-left: auto; 
-      }
-    
 
-    h1{
-        display:block;
-        margin-right: auto;
-        margin-left: auto; 
+
+    .cloud {
+      @keyframes magnificent_popup {
+        from {
+          left: 20px;
+        }
+
+        to {
+          left: 900px;
+        }
       }
 
-    img {
-
-        justify-self: center;
-        width: 40%;
-        border-radius: 0% 15%;
-        display:block;
-        margin-right: auto;
-        margin-left: auto; 
-      }
-
-    .login {
-        align-items: center;
-        text-align: center;
-        padding: 2%;
-        width:350px;
-        display: flex;
-        flex-direction: column;
-        background-color: rgba(128, 128, 128, 0.151);
-        border-radius: 25px;
-        display:block;
-        margin-right: auto;
-        margin-left: auto; 
-      }
-
+      position: absolute;
+      top: 15vh;
+      width: 200px;
+      animation-name: magnificent_popup;
+      animation-duration: 15s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      animation-fill-mode: forwards;
+      border-radius: 20%;
+      z-index: -1;
 
     }
-  }
 
+    .cloud.active {
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+    .bird {
+      position: absolute;
+      top: 30px;
+      right: 3vw;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+
+      img {
+        width: 100px;
+      }
+    }
+
+
+    h1 {
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+    img {
+      justify-self: center;
+      max-width: 45%;
+      border-radius: 15%;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      z-index: -2;
+    }
+
+    .login {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 2%;
+      width: 290px;
+      height: fit-content;
+      background-color: rgba(128, 128, 128, 0.151);
+      border-radius: 25px;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+
+  }
+}
