--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -32,7 +32,7 @@ nav ul {
   justify-content: space-around;
   padding: 1rem;
 
-  border-radius: 0 0 1em 1em;
+  // border-radius: 0 0 1em 1em; --- in the original its not rounded
 
   li a i {
     background-color: #f0f0f2;
