--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -11,11 +11,15 @@ body {
 }
 
 #landing {
-  // padding-top: 1.5rem; ---- added a media query at the bottom of the page
+  // padding-top: 1.5rem; ---- added a media query
   width: 100vw;
   height: 100%;
   margin: auto;
   background-color: #f0f0f2;
+
+  @media only screen and (min-width: 600px) {
+    margin-top: 3.5rem;
+  }
 
   &__dailytaskslist {
     padding-top: 1.5rem;
@@ -127,6 +131,7 @@ body {
     background: white;
     padding: 30px;
     padding-top: 20px;
+
     &__logo {
       display: flex;
       justify-content: space-between;
@@ -177,9 +182,11 @@ body {
         border: none;
         width: 75vw;
       }
+
       @media only screen and (min-width: 600px) {
         width: 95vw;
-        input{
+
+        input {
           width: 90vw;
         }
       }
@@ -387,7 +394,8 @@ body {
             font-weight: 600;
             font-size: 1rem;
           }
-          &-home-text{
+
+          &-home-text {
             font-size: 1.3rem;
           }
 
@@ -696,9 +704,4 @@ main {
 
 .md-40 {
   font-size: 40px;
-}
-@media only screen and (min-width: 600px) {
-#landing{
-  margin-top: 3.5rem;
-}
 }
