--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -68,6 +68,7 @@ nav ul {
     background-color: gainsboro;
     border-radius: 5px;
     padding: 12px;
+
   }
 
   &__mytasks {
@@ -121,6 +122,7 @@ nav ul {
 
     ul {
       top: 0;
+      border-radius: 0;
 
       li {
         flex: 1 2 auto;
