--- a/01-HTML-CSS/09-animations/tamir/tamir2.scss
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.scss
@@ -63,7 +63,6 @@ body {
     justify-content: space-between;
 
     &__icon {
-
         position: relative;
         top: 1px;
         font-size: 1.5em;
@@ -72,33 +71,41 @@ body {
     }
 
     &__name {
-
         color: orangered;
         font-family: Arial, Helvetica, sans-serif;
-    }
+        border-radius: 10px;
+        padding: 3px;
 
+    }
 
     &__info {
 
         font-weight: bold;
         font-size: 1.4em;
         font-family: Arial, Helvetica, sans-serif;
+
+        :hover {
+            cursor: pointer;
+            color: black;
+
+        }
     }
 
     &__button {
         position: relative;
-
         width: 20px;
         height: 20px;
         border-radius: 40px;
         background-color: rgb(0, 0, 0);
         text-align: center;
 
+        :hover {
+            cursor: pointer;
+        }
     }
 
     &__num {
         color: white;
-
     }
 }
 
@@ -171,6 +178,9 @@ body {
         font-family: Arial, Helvetica, sans-serif;
     }
 }
+
+
+
 
 @media only screen and(min-width: 670px) {
     .wrapperfirst {
