--- a/01-HTML-CSS/09-animations/tamir/tamir2.scss
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.scss
@@ -69,25 +69,15 @@ body {
         border-radius: 4px;
         margin-right: 6px;
     }
-
-    &__name {
-        color: orangered;
-        font-family: Arial, Helvetica, sans-serif;
-        border-radius: 10px;
-        padding: 3px;
-
-    }
-
     &__info {
-
         font-weight: bold;
         font-size: 1.4em;
         font-family: Arial, Helvetica, sans-serif;
+        padding-right: 30px;
 
         :hover {
             cursor: pointer;
             color: black;
-
         }
     }
 
@@ -118,7 +108,6 @@ body {
     &__info {
         font-size: 1.4em;
         font-family: Arial, Helvetica, sans-serif;
-
     }
 
     &__bottun {
@@ -144,7 +133,6 @@ body {
 
     &__info {
         padding-left: 20px;
-
     }
 
     &__des {
@@ -155,8 +143,6 @@ body {
         display: flex;
         margin: 15px;
         justify-content: space-between;
-
-
     }
 
     &__price {
@@ -179,6 +165,46 @@ body {
     }
 }
 
+.drop {
+    position: relative;
+    margin: -30%;
+    display: inline-block;
+
+    &__btn {
+        background-color: rgb(163, 162, 162);
+        color: white;
+        padding: 6px;
+        font-size: 16px;
+        border: none;
+    }
+
+    .drop:hover &__content {
+        font-size: 2em;
+        display: block;
+    }
+
+    &__content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+
+        a {
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            font-family: Arial, Helvetica, sans-serif;
+            color: rgb(0, 0, 0);
+        }
+
+        a:hover {
+            background-color: rgb(163, 162, 162);
+            text-decoration: underline;
+        }
+    }
+}
 
 
 
@@ -239,6 +265,23 @@ body {
 
         &__price {
             font-size: 2rem;
+        }
+    }
+    .drop {
+        &__btn {
+            border-radius: 20px;
+            padding: 23px; 
+        }
+    
+        .drop:hover &__content {
+            border-radius: 20px;
+        }
+    
+        &__content {
+            a:hover {
+                border-radius: 20px;
+                text-decoration: underline;
+            }
         }
     }
 }
